--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-size: 20px;
     color: #333;
-    background: #edf;
+    background: #ddf;
 }
 
 table, th, td {
@@ -14,11 +14,11 @@ table, th, td {
     }
 
 p {
-    margin: 8px 8px 8px 40px;
+    margin: 8px 40px 8px 40px;
 }
 
 ol, ul, dl, li {
-    margin: 20px 8px 8px 12px;
+    margin: 20px 12px 8px 12px;
 }
 
 p {
@@ -41,7 +41,7 @@ h1 {
 
 h2 {
     font-size: 26px;
-    margin: 20px 8px 12px 24px;
+    margin: 20px 24px 12px 24px;
     color: #066;
 }
 
@@ -54,14 +54,14 @@ h2.subhead {
 
 h3 {
     font-size: 20px;
-    margin: 20px 8px 12px 32px;
+    margin: 20px 32px 12px 32px;
     color: #633;
     font-weight: bold;
 }
 
 h4 {
     font-size: 18px;
-    margin: 16px 8px 12px 40px;
+    margin: 16px 40px 12px 40px;
     color: #339;
     font-weight: bold;
 }
