--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h3 {
 h4 {
     font-size: 18px;
     margin: 16px 40px 12px 40px;
-    color: #339;
+    color: #99f;
     font-weight: bold;
 }
 
