--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-size: 20px;
-    color: #ddd;
-    background: #444;
+    color: #333;
+    background: #ddd;
 }
 
 a:link {
@@ -44,14 +44,14 @@ h1 {
     text-align: center;
     font-weight: 300;
     font-size: 32px;
-    color: #339;
-    background-color: #cfc;
+    color: #cfc;
+    background-color: #339;
 }
 
 h2 {
     font-size: 26px;
     margin: 20px 24px 12px 24px;
-    color: #9cc;
+    color: #355;
 }
 
 h2.subhead {
@@ -64,14 +64,14 @@ h2.subhead {
 h3 {
     font-size: 20px;
     margin: 20px 32px 12px 32px;
-    color: #ecb;
+    color: #532;
     font-weight: bold;
 }
 
 h4 {
     font-size: 18px;
     margin: 16px 40px 12px 40px;
-    color: #99f;
+    color: #335;
     font-weight: bold;
 }
 
