--- a/style.css
+++ b/style.css
@@ -55,10 +55,8 @@ h2 {
 }
 
 h2.subhead {
-    font-weight:
-    normal;
-    margin-top:
-    0;
+    font-weight: normal;
+    margin-top: 0;
 }
 
 h3 {
