--- a/style.css
+++ b/style.css
@@ -109,3 +109,9 @@ span.proposed {
     color: #805;
 }
 
+.center-img {
+    margin: .6em 0em 1em 0em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
