--- a/style.css
+++ b/style.css
@@ -14,13 +14,37 @@ a:visited {
     color: #547;
 }
 
-
 table, th, td {
+    margin: .4em 2.5em .4em 2.5em;
+    font-size: 1em;
+    border-collapse: collapse;
     border: 1px solid black;
     }
-    th, td {
-            padding: 1.3em;
-    }
+
+th, td {
+        padding: 1em;
+}
+
+th {
+    color: #011;
+    background: #cdf;
+}
+
+th.table-head {
+    color: #011;
+    background: #7386D5;
+}
+
+td {
+    color: #000;
+    background: #adf;
+}
+
+td.key-col {
+    color: #600;
+    background: #bef;
+}
+
 
 p {
     margin: .6em 3em .6em 3em;
@@ -117,7 +141,7 @@ span.proposed {
 }
 
 .center-img {
-    margin: .6em 0em 1.6em 0em;
+    margin: .6em 0em 1.8em 0em;
     display: block;
     margin-left: auto;
     margin-right: auto;
