--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     color: #333;
     background: #ddd;
     line-height: 1.8;
+/*    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif */
+    font-family: Arial, Helvetica, sans-serif
 }
 
 a:link {
@@ -120,12 +122,12 @@ h5 {
 
 p.author_info {
     text-align: center;
-    font: 1.3em Baskerville
+    font: 1.3em
 }
 
 blockquote {
     margin: 1em 5em 1em 5em;
-    font: 1.5em Baskerville
+    font: 1.5em
 }
 
 p.biblio {
