Improved page formatting.

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h1,h2,h3,h4,h5 {
 }
 
 h1 {
-    margin: 1.4em .6em 1.4em .6em;
+    margin: 1.4em 8em 1.4em 8em;
     text-align: center;
     font-weight: 300;
     font-size: 2em;
