--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
 
 p.menu {
     text-align: center;
-    margin: .4em 4em .8em 4em;
+    margin: .4em 4em 0em 4em;
     font-size: 1.4em;
 }
 
@@ -152,6 +152,20 @@ blockquote {
 
 p.biblio {
     margin: .6em 3em .6em 3em; 
+}
+
+figure {
+    margin: 1.4em 1em 1.4em 1em;
+    text-align: center;
+}
+figure.logo {
+    margin: 0em 0em .6em 0em;
+}
+
+figure figcaption {
+    color: #69c;
+    font-style: italic;
+    margin: .8em 1em .8em 1em;
 }
 
 span.contrib {
